force-app/main/default/objects/MyHoliday__c/MyHoliday__c.object-meta.xml
<CustomObject>
    <label>MyHoliday</label>
    <nameField>
        <label>MyHoliday Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>MyHolidays</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>