force-app/main/default/objects/MyHoliday__c/fields/cnt__c.field-meta.xml
<CustomField>
    <fullName>cnt__c</fullName>
    <label>cnt</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>