force-app/main/default/objects/MyHoliday__c/fields/date__c.field-meta.xml
<CustomField>
    <fullName>date__c</fullName>
    <label>date</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
</CustomField>