force-app/main/default/objects/MyHoliday__c/fields/holidayName__c.field-meta.xml
<CustomField>
    <fullName>holidayName__c</fullName>
    <label>holidayName</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
</CustomField>